Name:		EGLRaw
Version:	0.0
Synopsis:	binding to EGL (low level)
Description: 	binding to EGL (low level)
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Custom
Cabal-Version:  >= 1.8
data-files:     



Library
  hs-source-dirs: src
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, 
                   mtl>2, 
                   directory, 
                   filepath,
                   cmdargs
  Exposed-Modules: 
                   Graphics.Rendering.EGL.Raw 

  Other-Modules: 

 
		 